--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,9 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.0'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.0'
+    implementation 'androidx.navigation:navigation-dynamic-features-fragment:2.5.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'androidx.databinding:viewbinding:7.2.1'
     implementation 'com.google.android.material:material:1.6.1'
